# wisper

./: .dockerignore  .gitignore  .goreleaser.yaml  CLAUDE.md  Dockerfile  Dockerfile.desktop  Dockerfile.goreleaser  Dockerfile.windows  LICENSE  Makefile  README.md  app.go  build.sh  go.mod  go.sum  lib.go  lib_jni.c  main.go  web.go
.claude/: settings.json
.codegraph/: daemon.pid
.github/workflows/: ci.yml  release.yml
android/: Dockerfile.android  Dockerfile.test  gradlew  lib_jni.c  settings.gradle.kts
android/app/: build.gradle.kts
android/scripts/: avd_config.ini  create-package-xml.sh  download-test-assets.sh  start-emulator.sh
api/: api_test.go  config_handler.go  entrypoint_handler.go  server.go  stats_handler.go  tunnel_handler.go  version_handler.go  version_test.go
config/: config.go
docs/: flutter-ui-design.md  implementation-plan.md  lit-web-rewrite-plan.md
docs/prototype/: index.html
flutter/: README.md  pubspec.yaml
flutter/lib/: app.dart  main.dart
flutter/linux/: CMakeLists.txt
flutter/test/: models_test.dart  tunnel_card_test.dart  widget_test.dart  widgets_test.dart
runner/: runner.go  task.go
scripts/: gen-android-icons.py  gen-icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tunnel/: file.go  http.go  tcp.go  tunnel.go  udp.go
version/: version.go
web/: .last_build_id  flutter_bootstrap.js  index.html  main.dart.js  manifest.json  version.json
web-src/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-src/src/: app.ts  (+1 more)
(+520 files in other folders)
