[package]
name = "wisper"
version = "0.1.0"
description = "GOST Tunnel Manager — Desktop"
authors = ["ginuerzh"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
# libc is already a transitive dep of tauri on Unix; used directly to send the
# sidecar a graceful SIGTERM (tauri_plugin_shell only exposes SIGKILL).
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
